--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="33dp"
+            android:layout_marginRight="33dp"
             android:text="reset Score"
             style="?android:attr/buttonBarButtonStyle"
             />
@@ -64,6 +66,7 @@
             android:layout_weight="1"
             android:freezesText="true"
             android:textSize="60sp"
+            android:background="@android:color/black"
             style="?android:attr/buttonBarButtonStyle" />
 
         <Button
@@ -82,6 +85,7 @@
             android:layout_weight="1"
             android:freezesText="true"
             android:textSize="60sp"
+            android:background="@android:color/black"
             style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
@@ -107,6 +111,7 @@
             android:layout_weight="1"
             android:freezesText="true"
             android:textSize="60sp"
+            android:background="@android:color/black"
             style="?android:attr/buttonBarButtonStyle" />
 
         <Button
@@ -132,6 +137,7 @@
             android:layout_weight="1"
             android:freezesText="true"
             android:textSize="60sp"
+            android:background="@android:color/black"
             style="?android:attr/buttonBarButtonStyle" />
 
         <Button
@@ -150,6 +156,7 @@
             android:layout_weight="1"
             android:freezesText="true"
             android:textSize="60sp"
+            android:background="@android:color/black"
             style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
